tests/characterization/snapshots/characterization__backend_versions_filters_and_sorts_stable_semver_tags.snap
---
source: tests/characterization/main.rs
expression: "render_observation(&context, &output, &[])"
---
exit: 0
--- stdout ---
engine:
  v10.0.0
  v2.0.0
  v1.10.0
  v1.2.3
  v0.9.9
--- stderr ---
--- filesystem ---
<EMPTY>
--- selected files ---
<NONE>
--- end ---
