tests/characterization/snapshots/characterization__init_backend_creates_rendered_environment.snap
---
source: tests/characterization/main.rs
expression: "render_observation(&context, &output,\n&[\"demo/.metadata\", \"demo/config/.env\", \"demo/config/nested/backend.toml\",\n\"demo/compose.yaml\",],)"
---
exit: 0
--- stdout ---
Created backend environment: <TEST_ROOT>/work/demo
--- stderr ---
--- filesystem ---
demo/
demo/.metadata
demo/compose.yaml
demo/config/
demo/config/.env
demo/config/nested/
demo/config/nested/backend.toml
demo/logs/
demo/logs/combiner/
demo/logs/core/
demo/logs/estimator/
demo/logs/gateway/
demo/logs/mitigator/
demo/logs/sse_engine/
demo/logs/tranqu/
demo/pids/
demo/sse_work/
--- selected files ---
--- demo/.metadata ---
template=backend
install_root=<TEST_ROOT>/xdg-data/oqtopus/backend/releases
env_name=demo
env_root=<TEST_ROOT>/work/demo
created_at=2031-12-13T14:15:16Z
--- demo/config/.env ---
ENV_NAME=demo
API_URL=http://demo.example.test
--- demo/config/nested/backend.toml ---
mode = "fixture"
--- demo/compose.yaml ---
name: characterization
--- end ---
