tests/characterization/snapshots/characterization__init_manager_creates_environment.snap
---
source: tests/characterization/main.rs
expression: "render_observation(&context, &output,\n&[\"demo/.metadata\", \"demo/config/config.yaml\"],)"
---
exit: 0
--- stdout ---
Created manager environment: <TEST_ROOT>/work/demo
--- stderr ---
--- filesystem ---
demo/
demo/.metadata
demo/config/
demo/config/config.yaml
demo/config/logging.yaml
demo/logs/
demo/pids/
--- selected files ---
--- demo/.metadata ---
template=manager
install_root=<TEST_ROOT>/xdg-data/oqtopus/manager/releases
environment_name=demo
environment_root=<TEST_ROOT>/work/demo
created_at=2031-12-13T14:15:16Z
--- demo/config/config.yaml ---
manager:
  port: 8080
--- end ---
