tests/characterization/snapshots/characterization__version_resolves_latest_when_cli_version_is_empty.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 0
--- stdout ---
oqtopus v1.0.99
--- stderr ---
Warning: the GitHub tags API returned 100 tags.
Warning: Additional tags may exist, so latest version resolution may be incomplete.
--- end ---
